Bug 330591 - Selecting results during search causes crash
Summary: Selecting results during search causes crash
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-30 19:45 UTC by leo21
Modified: 2014-01-31 04:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description leo21 2014-01-30 19:45:05 UTC
Suppose I have searched for a movie (using IMDB), I have the results list in the search dialog. If I hit <search> again without hitting <clear>, the program performs another search (indicated by the busy bar down on the right). If I now select one of the results in the list before the search is done -- bang, sudden death, tellico disappears and KDE bug report comes up.
This is probably no intended behaviour...

Reproducible: Always

Steps to Reproduce:
1. open search
2. enter movie name and click search
3. wait for results
4. hit search again
5. select result before search is done
Actual Results:  
crash, all changes lost

Expected Results:  
load the movie info or disable select
Comment 1 Christoph Feck 2014-01-30 22:25:46 UTC
If this is reproducible, could you please add the backtrace? For more information, please see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
Comment 2 Robby Stephenson 2014-01-31 04:43:02 UTC
Git commit 037fbc9aacfa8ed9144fe350e0001a93459be281 by Robby Stephenson.
Committed on 31/01/2014 at 04:40.
Pushed by rstephenson into branch '2.3'.

Fix crashing bug when restarting IMDb search

Starting a new IMDB search and then selecting a result from the previous
search would attempt to access a non-existant uid, creating a blank
entry.

Check for a blank entry in the fetch dialog, and also retain previous
matches in the IMDb fetcher.
FIXED-IN: 2.3.9

M  +4    -0    ChangeLog
M  +6    -2    src/fetch/imdbfetcher.cpp
M  +3    -0    src/fetch/imdbfetcher.h
M  +5    -0    src/fetchdialog.cpp

http://commits.kde.org/tellico/037fbc9aacfa8ed9144fe350e0001a93459be281