Fix crashing bug when restarting IMDb search

Starting a new IMDB search and then selecting a result from the previous
search would attempt to access a non-existant uid, creating a blank
entry.

Check for a blank entry in the fetch dialog, and also retain previous
matches in the IMDb fetcher.

BUG: 330591
FIXED-IN: 2.3.9